# sound2midi

./: .gitignore  README.md  pyproject.toml
src/sound2midi/: __init__.py  __main__.py  amt.py  cli.py  download.py  mei.py  sections.py
src/sound2midi/_amt/: chords_detect.py  key_detect.py  meter_detect.py  stem_pipeline.py
src/sound2midi/_songformer/: sections_detect.py
src/sound2midi/player/: __init__.py  _window.py  app.py  chordlabel.py  chordstrip.py  engine.py  export.py  pianoroll.py  sectionstrip.py
